@@ -6,3 +6,8 @@ and this project adheres to [Semantic Versioning](http://semver.org/).
 
 
 ## [Unreleased]
+### Changed
+- HOST_NAME is now SERVER_NAME in the config
+
+### Fixed
+- Reset Password Link in emails
